# Keirsona

./: README.md  pyproject.toml
.github/: CODEOWNERS
src/: __init__.py  main.py
src/bot/: dispatcher.py
src/bot/dispatcher/: bot_app.py
src/bot/handlers/: quiz.py  start.py
src/bot/keyboards/: menu_keyborad.py
src/bot/services/menu/: router.py
src/bot/services/quiz/: api.py  models.py  router.py
src/bot/services/start/: router.py
src/bot/utils/: generate_first_entry_keyboard.py  generate_keyboard.py  pdf_generator.py  text_template.py
src/db/: cursor.py  quiz_instance.py  user_instance.py
src/db/models/: Question.py
