[project]
name = "keirsona"
version = "0.1.0"
description = ""
authors = [
    {name = "aleb995"},
    {name = "arinaogareva"},
    {name = "LycorisAlex"},
    {name = "oliriel-sr"},
    {name = "sannaww"},
    {name = "souma94621"},
    {name = "tochkazapi"},
    {name = "Veranri"}
]
license = {text = "Apache-2.0 license"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["sqlalchemy (>=2.0.41,<3.0.0)", "aiogram (>=3.20.0.post0,<4.0.0)", "pydantic (>=2.11.5,<3.0.0)", "dotenv (>=0.9.9,<0.10.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
