[project]
name = "keirsona-refactored"
version = "0.1.0"
description = ""
authors = [
    {name = "Kaiseridze",email = "kaiseidze@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite (>=0.21.0,<0.22.0)",
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pylint (>=3.3.7,<4.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "mypy (>=1.16.0,<2.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "reportlab>=4.4.1,<5.0; python_version < '4.0'"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
